--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 02 - Plastic waste"
-author: "Votre nom"
-date: "La date"
+author: "Alexandrine Parent"
+date: "20 septembre 2025"
 output: github_document
 ---
 
@@ -27,8 +27,16 @@ plastic_waste <- plastic_waste %>%
 
 ### Exercise 1
 
+L'Afrique et l'Asie ont une large distribution avec plusieurs pays ayant des valeurs faibles à moyennes.
+L'Europe a une concentration autour d'une valeur un peu plus élevée.
+L'Amérique du Nord et l'Océanie ont des distributions un peu plus étroites, qui tournent autour de valeurs basses à moyennes.
+L'Amérique du Sud possède moins de données (moins de pays) avec des valeurs basses.
+
 ```{r plastic-waste-continent}
-# insert code here
+ggplot(plastic_waste, aes(x=plastic_waste_per_cap))+
+  geom_histogram(binwidth = 0.2)+
+  facet_wrap(~continent)+
+  labs(title="Distribution de la quantité de déchets plastiques par habitant", x="Déchets plastiques par habitant (kg/jour)", y="Nombre de pays")
 ```
 
 ### Exercise 2
