Mise à jour de la question 2

--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -42,10 +42,11 @@ ggplot(plastic_waste, aes(x=plastic_waste_per_cap))+
 ### Exercise 2
 
 ```{r plastic-waste-density}
-# insert code here
+ggplot(plastic_waste, aes(x=plastic_waste_per_cap, fill=continent)) +
+  geom_density(alpha=0.2)
 ```
+Le réglage de la couleur (color et fill) et le réglage de la transparence (alpha) ne se retrouvent pas au même endroit, car pour le réglage de la couleur, on associe une variable du jeu de données (continent) à une caractéristique visuelle du graphique. La couleur dépend donc de la valeur d'une variable. Cependant, pour le réglage de la transparence, alpha est un paramètre fixe, car on veut que chaque courbe ait le même niveau de transparence.
 
-Réponse à la question...
 
 ### Exercise 3
 
