--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -33,6 +33,8 @@ L'Amérique du Nord et l'Océanie ont des distributions un peu plus étroites, q
 L'Amérique du Sud possède moins de données (moins de pays) avec des valeurs basses.
 
 ```{r plastic-waste-continent}
+plastic_waste <- plastic_waste %>%
+  filter(plastic_waste_per_cap < 3.5)
 ggplot(plastic_waste, aes(x=plastic_waste_per_cap))+
   geom_histogram(binwidth = 0.2)+
   facet_wrap(~continent)+
@@ -42,6 +44,8 @@ ggplot(plastic_waste, aes(x=plastic_waste_per_cap))+
 ### Exercise 2
 
 ```{r plastic-waste-density}
+plastic_waste <- plastic_waste %>%
+  filter(plastic_waste_per_cap < 3.5)
 ggplot(plastic_waste, aes(x=plastic_waste_per_cap, fill=continent)) +
   geom_density(alpha=0.2)
 ```
@@ -53,38 +57,57 @@ Le réglage de la couleur (color et fill) et le réglage de la transparence (alp
 Boxplot:
 
 ```{r plastic-waste-boxplot}
-# insert code here
+plastic_waste <- plastic_waste %>%
+  filter(plastic_waste_per_cap < 3.5)
+ggplot(plastic_waste, aes(x=continent, y=plastic_waste_per_cap)) +
+  geom_boxplot()
 ```
 
 Violin plot:
 
 ```{r plastic-waste-violin}
-# insert code here
+plastic_waste <- plastic_waste %>%
+  filter(plastic_waste_per_cap < 3.5)
+ggplot(plastic_waste, aes(x=continent, y=plastic_waste_per_cap)) +
+  geom_violin()
 ```
 
-Réponse à la question...
+Les violins plots permettent de voir la forme de la distribution tout au long de l'axe verticale, alors que pour le boxplot, on ne voit pas la forme globale. Les violins plots permettent également de voir combien de données sont présentes à chaque niveau, si la forme est large, cela veut dire qu'il y a beaucoup de données, et si la forme est fine, cela veut dire qu'il y a peu de données, alors que pour le boxplot, toutes les zones sont plates, donc on ne peut pas voir les endroits où les valeurs sont les plus concentrées.
 
 ### Exercise 4
 
 
 ```{r plastic-waste-mismanaged}
-# insert code here
+plastic_waste <- plastic_waste %>%
+  filter(plastic_waste_per_cap < 3.5)
+ggplot(plastic_waste, aes(x=plastic_waste_per_cap, y=mismanaged_plastic_waste_per_cap, color=continent))+
+  geom_point()+
+  labs(x="Déchets plastiques par habitant(kg/jour)", y="Déchets plastiques non gérés par habitant (kg/jour)", title="Relation entre déchets plastiques et déchets non gérés", color="continent")
 ```
 
-Réponse à la question...
+Le graphique de dispersion montre une relation positive, donc plus un pays produit de déchets plastiques, plus il y a de déchets non gérés, mais cela peut varier selon les continents. Par exemple, des pays d'Asie ou d'Afrique font peu de déchets, mais ils gèrent mal la majorité de ceux-ci. Pour les pays d'Europe ou d'Amérique du Nord, ils produisent beaucoup de déchets, mais ils les gèrent bien.
+
 
 ### Exercise 5
 
 
 ```{r plastic-waste-population-total}
-# insert code here
+plastic_waste <- plastic_waste %>%
+  filter(plastic_waste_per_cap < 3.5)
+ggplot(plastic_waste, aes(x=plastic_waste_per_cap, y=total_pop))+
+  geom_point(alpha=0.5, color="darkblue")+
+  labs(x="Déchets plastiques par habitant(kg/jour)", y="Population totale", title="Relation entre déchets plastiques par habitant et population totale")
 ```
 
 ```{r plastic-waste-population-coastal}
-# insert code here
+plastic_waste <- plastic_waste %>%
+  filter(plastic_waste_per_cap < 3.5)
+ggplot(plastic_waste, aes(x=plastic_waste_per_cap, y=coastal_pop))+
+  geom_point(alpha=0.5, color="darkgreen")+
+  labs(x="Déchets plastiques par habitant(kg/jour)", y="Population côtière", title="Relation entre déchets plastiques par habitant et population côtière")
 ```
 
-Réponse à la question...
+Au niveau des deux graphiques, il n'y a pas vraiment de relation plus forte pour l'une des paires de variables. Les points sont assez dispersés horizontalement et cela indique que la production de déchets par habitant est relativement indépendante de la population.La différence principale est seulement au niveau de l'échelle de la population, qui est plus vaste au niveau de la population totale.
 
 ## Conclusion
 
