--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -46,8 +46,9 @@ ggplot(plastic_waste, aes(x=plastic_waste_per_cap))+
 ```{r plastic-waste-density}
 plastic_waste <- plastic_waste %>%
   filter(plastic_waste_per_cap < 3.5)
-ggplot(plastic_waste, aes(x=plastic_waste_per_cap, fill=continent)) +
-  geom_density(alpha=0.2)
+ggplot(plastic_waste, aes(x=plastic_waste_per_cap, fill=continent, color=continent)) +
+  geom_density(alpha=0.2)+
+  labs(title="Distribution de la quantité de déchets plastiques par habitant selon les continents", x="Déchets plastiques par habitant (kg/jour)", y="Densité")
 ```
 Le réglage de la couleur (color et fill) et le réglage de la transparence (alpha) ne se retrouvent pas au même endroit, car pour le réglage de la couleur, on associe une variable du jeu de données (continent) à une caractéristique visuelle du graphique. La couleur dépend donc de la valeur d'une variable. Cependant, pour le réglage de la transparence, alpha est un paramètre fixe, car on veut que chaque courbe ait le même niveau de transparence.
 
@@ -60,7 +61,8 @@ Boxplot:
 plastic_waste <- plastic_waste %>%
   filter(plastic_waste_per_cap < 3.5)
 ggplot(plastic_waste, aes(x=continent, y=plastic_waste_per_cap)) +
-  geom_boxplot()
+  geom_boxplot()+
+  labs(title="Distribution de la quantité de déchets plastiques par habitant selon les continents", x="Continent", y="Déchets plastiques par habitant (kg/jour)")
 ```
 
 Violin plot:
@@ -69,7 +71,8 @@ Violin plot:
 plastic_waste <- plastic_waste %>%
   filter(plastic_waste_per_cap < 3.5)
 ggplot(plastic_waste, aes(x=continent, y=plastic_waste_per_cap)) +
-  geom_violin()
+  geom_violin()+
+  labs(title="Distribution de la quantité de déchets plastiques par habitant selon les continents", x="Continent", y="Déchets plastiques par habitant (kg/jour)")
 ```
 
 Les violins plots permettent de voir la forme de la distribution tout au long de l'axe verticale, alors que pour le boxplot, on ne voit pas la forme globale. Les violins plots permettent également de voir combien de données sont présentes à chaque niveau, si la forme est large, cela veut dire qu'il y a beaucoup de données, et si la forme est fine, cela veut dire qu'il y a peu de données, alors que pour le boxplot, toutes les zones sont plates, donc on ne peut pas voir les endroits où les valeurs sont les plus concentrées.
@@ -107,7 +110,7 @@ ggplot(plastic_waste, aes(x=plastic_waste_per_cap, y=coastal_pop))+
   labs(x="Déchets plastiques par habitant(kg/jour)", y="Population côtière", title="Relation entre déchets plastiques par habitant et population côtière")
 ```
 
-Au niveau des deux graphiques, il n'y a pas vraiment de relation plus forte pour l'une des paires de variables. Les points sont assez dispersés horizontalement et cela indique que la production de déchets par habitant est relativement indépendante de la population.La différence principale est seulement au niveau de l'échelle de la population, qui est plus vaste au niveau de la population totale.
+Au niveau des deux graphiques, il n'y a pas vraiment de relation plus forte pour l'une des paires de variables. Sur les deux graphiques, les points sont assez dispersés horizontalement et cela indique que la production de déchets par habitant est relativement indépendante de la population. La différence principale est seulement au niveau de l'échelle de la population, qui est plus vaste au niveau de la population totale. Cela fait en sorte que le graphique sur les populations totales est plus difficile à lire en raison des très grands pays qui tirent l'échelle vers le haut. Cependant, même si le graphique sur les populations côtières donne une meilleure répartition, la tendance reste très faible.
 
 ## Conclusion
 
